Resolves: fdo#87245 crash because clip doc doesn't own DocumentPool

multiple documents sharing the same doc pool so can't unset its
secondary here.

Here the assumption is that SharePooledResources has always been called on Clip
or Undo docs (otherwise persumably need a flag which SharePooledResources
toggles on)

Change-Id: Ibcdbe5f698102dc683c290d3bd581c31e214765f
(cherry picked from commit 7a85674c93150d6f5a59e998158909365b47d761)
Reviewed-on: https://gerrit.libreoffice.org/13451
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>